--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10375,13 +10375,17 @@ footer.mobile {
 .landing {
   width: 100vw;
   max-width: 100%;
-  background: url(../img/bg-landing.jpg) no-repeat top center;
-  background-size: cover;
   text-align: center;
   position: relative; }
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     .landing {
-      height: 500px; } }
+      height: 500px;
+      background: url(../img/bg-landing.jpg) no-repeat top center;
+      background-size: cover; } }
+  @media screen and (max-width: 767px) {
+    .landing {
+      background: url(../img/bg-landing-mobile.jpg) no-repeat bottom center;
+      background-size: cover; } }
   .landing h1, .landing p {
     width: 100%;
     color: white; }
@@ -10397,17 +10401,63 @@ footer.mobile {
     float: none !important; }
     @media screen and (max-width: 767px) {
       .landing .headline h1 {
-        margin-top: 150px; } }
+        margin-top: 150px;
+        font-size: 2.1em;
+        letter-spacing: 2px;
+        line-height: 1.3; } }
     .landing .headline p {
       letter-spacing: 1.34px;
       padding: 0 10%; }
       @media screen and (max-width: 767px) {
         .landing .headline p {
           display: none; } }
-  .landing .choice .search-word {
+    @media screen and (max-width: 767px) {
+      .landing .headline .title-break {
+        display: none; } }
+    .landing .headline .title-break-xs {
+      display: none; }
+      @media screen and (max-width: 767px) {
+        .landing .headline .title-break-xs {
+          display: initial; } }
+  .landing .btn-where {
+    background-color: #fff;
+    width: 65%;
+    height: 63px;
+    line-height: 49px;
+    border-radius: 0;
+    color: #d6d6d6;
+    font-size: 1.6em;
+    font-family: "Lato", sans-serif;
+    font-weight: 200; }
+  .landing .btn-around {
+    height: 63px;
+    background-color: #f4f4f4;
+    background-repeat: no-repeat;
+    background-position: left;
+    border-radius: 0;
+    line-height: 12px;
+    position: relative;
+    padding-left: 30px;
+    padding-top: 19px;
+    color: #bababa;
+    font-weight: 200; }
+    .landing .btn-around:before {
+      content: ' ';
+      width: 20px;
+      height: 20px;
+      top: 22px;
+      left: 4px;
+      position: absolute;
+      background: url(../img/icons/localisation-red.svg) no-repeat center center;
+      background-size: contain;
+      color: blue; }
+  @media screen and (max-width: 767px) {
+    .landing .choice-large {
+      display: none; } }
+  .landing .choice-large .search-word {
     font-size: 2.3em;
     text-transform: uppercase; }
-  .landing .choice .btn-red {
+  .landing .choice-large .btn-red {
     height: 58px;
     font-size: 1.4em;
     text-align: center;
@@ -10415,7 +10465,7 @@ footer.mobile {
     margin: 10px;
     line-height: 30px;
     text-transform: uppercase;
-    font-family: "Lato", sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 700;
     border-radius: 0;
     padding: 16px 30px;
@@ -10528,9 +10578,26 @@ section.home-section {
 #home section.home-search .main-searchbar {
   margin: 0; }
 
+#home section.home-search .home-search-mobile {
+  height: 40px; }
+
+#home section.home-search .btn-red {
+  width: 104%;
+  height: 58px;
+  font-size: 1.4em;
+  text-align: center;
+  padding: 0;
+  margin-left: -7px;
+  margin-top: 10px;
+  line-height: 30px;
+  text-transform: uppercase;
+  font-family: "Source Sans Pro", sans-serif;
+  padding-top: 16px;
+  border-radius: 0 !important; }
+
 @media screen and (max-width: 767px) {
-  #home section.home-search {
-    display: none; } }
+  #home section.categories figure img {
+    max-height: 95px; } }
 
 #home section.categories figure:hover {
   -webkit-transition: all 0.25s ease-out;
