--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -4,12 +4,16 @@
 
 .landing {
     width: 100vw;
-    @media screen and (min-width: $screen-xs-max) {
+    @media screen and (min-width: $screen-sm-min) {
         height: 500px;
+        background: url(../img/bg-landing.jpg) no-repeat top center;
+        background-size: cover;
     }
-    max-width: 100%; // fix-mobile horizontal scroll
-    background: url(../img/bg-landing.jpg) no-repeat top center;
-    background-size: cover;
+    @media screen and (max-width: $screen-xs-max) {
+        background: url(../img/bg-landing-mobile.jpg) no-repeat bottom center;
+        background-size: cover;
+    }
+    max-width: 100%; // fix-mobile horizontal scroll    
     text-align: center;
     position: relative;
     h1, p {
@@ -31,6 +35,9 @@
         h1 {
             @media screen and (max-width: $screen-xs-max) {
                 margin-top: 150px;
+                font-size: 2.1em;
+                letter-spacing: 2px;
+                line-height: 1.3;
             }
         }
         p {
@@ -40,8 +47,59 @@
                 display: none;
             }
         }
+        .title-break {
+            @media screen and (max-width: $screen-xs-max){
+                display: none;
+            }
+        }
+        .title-break-xs {
+            display: none;
+            @media screen and (max-width: $screen-xs-max){
+                display: initial;
+            }
+        }
     }
-    .choice {
+
+        .btn-where {
+            background-color: $bg1;
+            width: 65%;
+            height: 63px;
+            line-height: 49px;
+            border-radius: 0;
+            color: #d6d6d6;
+            font-size: 1.6em;
+            font-family: $font-second;
+            font-weight: $light;
+        }
+        .btn-around {
+            height: 63px;
+            background-color: $bg3;
+            background-repeat: no-repeat;
+            background-position: left;
+            border-radius: 0;
+            line-height:  12px;
+            position: relative;
+            padding-left: 30px;
+            padding-top: 19px;
+            color: #bababa;
+            font-weight: $light;
+            &:before {
+                content: ' ';
+                width: 20px;
+                height: 20px;
+                top: 22px;
+                left: 4px;
+                position: absolute;
+                background: url(../img/icons/localisation-red.svg) no-repeat center center;
+                background-size: contain;
+                color: blue;
+            }
+        }
+
+    .choice-large {
+        @media screen and (max-width: $screen-xs-max){
+                display: none;
+        }
         .search-word {
             font-size: 2.3em;
             text-transform: uppercase;
@@ -54,7 +112,7 @@
             margin: 10px;
             line-height: 30px;
             text-transform: uppercase;
-            font-family: $font-second;
+            font-family: $font-main;
             font-weight: $latoBold;
             border-radius:0;
             padding: 16px 30px;
@@ -174,12 +232,37 @@ section.home-section {
     }
 
     @media screen and (max-width: $screen-xs-max) {
-        display: none;
+        //display: none;
+    }
+
+    .home-search-mobile {
+        height: 40px;
+    }
+
+    .btn-red {
+        width: 104%;
+        height: 58px;
+        font-size: 1.4em;
+        text-align: center;
+        padding: 0;
+        //margin: 10px;
+        margin-left: -7px;
+        margin-top: 10px;
+        line-height: 30px;
+        text-transform: uppercase;
+        font-family: $font-main;
+        padding-top: 16px;
+        border-radius: 0 !important;
     }
 }
 
 #home section.categories {
     figure {
+        img {
+                @media screen and (max-width: $screen-xs-max){
+                    max-height: 95px;
+                }
+            }
         &:hover {
             @include transition(all 0.25s ease-out);
 
