--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10419,6 +10419,9 @@ footer.mobile {
       @media screen and (max-width: 767px) {
         .landing .headline .title-break-xs {
           display: initial; } }
+  .landing .search-group {
+    width: 380px;
+    margin: auto; }
   .landing .btn-where {
     background-color: #fff;
     width: 65%;
@@ -10582,12 +10585,11 @@ section.home-section {
   height: 40px; }
 
 #home section.home-search .btn-red {
-  width: 104%;
+  width: 331px;
   height: 58px;
   font-size: 1.4em;
   text-align: center;
   padding: 0;
-  margin-left: -7px;
   margin-top: 10px;
   line-height: 30px;
   text-transform: uppercase;
