--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10602,20 +10602,27 @@ section.home-section {
     padding-top: 16px;
     border-radius: 0 !important; }
 
-@media screen and (max-width: 767px) {
+#home section.categories figure {
+  width: 100%; }
   #home section.categories figure img {
-    max-height: 95px; } }
+    background-size: cover;
+    background-position: center; }
+  #home section.categories figure:hover {
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    -ms-transition: all 0.25s ease-out;
+    -o-transition: all 0.25s ease-out; }
+    #home section.categories figure:hover img {
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1); }
 
-#home section.categories figure:hover {
-  -webkit-transition: all 0.25s ease-out;
-  -moz-transition: all 0.25s ease-out;
-  -ms-transition: all 0.25s ease-out;
-  -o-transition: all 0.25s ease-out; }
-  #home section.categories figure:hover img {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1); }
+#home section.categories figure, #home section.categories img {
+  height: 120px; }
+  @media screen and (max-width: 1200px) {
+    #home section.categories figure, #home section.categories img {
+      max-height: 95px; } }
 
 #home section.categories figcaption {
   font-size: 2.1em;
