--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10335,10 +10335,12 @@ footer {
     padding-bottom: 30px; }
   footer h4 {
     font-size: 3em;
-    width: 400px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px; }
+    @media screen and (min-width: 991px) {
+      footer h4 {
+        width: 400px; } }
   footer object {
     height: 75px;
     width: 75px;
@@ -10904,11 +10906,14 @@ section.how .row > div {
   padding-right: 5px; }
   #content.search .hairfie-search-newsletter .newsletter-banner p {
     font-size: 1.5em !important; }
+    @media screen and (max-width: 991px) {
+      #content.search .hairfie-search-newsletter .newsletter-banner p {
+        font-size: 1.1em !important; } }
 
 @media screen and (max-width: 991px) {
   #content.search {
-    margin-top: 85px;
-    padding-bottom: 85px; } }
+    margin-top: 60px;
+    padding-bottom: 60px; } }
 
 #content.search .breadcrumb {
   margin-top: 15px;
@@ -10969,6 +10974,10 @@ section.how .row > div {
     font-size: 21px;
     margin-top: 25px;
     margin-bottom: 25px; }
+    @media screen and (max-width: 767px) {
+      #content.search .main-content .header-part h1 {
+        margin-top: 0;
+        margin-bottom: 20px; } }
   #content.search .main-content .header-part p {
     font-weight: 200;
     font-size: 1.4em;
@@ -10976,10 +10985,7 @@ section.how .row > div {
     margin-bottom: 30px; }
     @media screen and (max-width: 767px) {
       #content.search .main-content .header-part p {
-        overflow: hidden;
-        white-space: nowrap;
-        /* Don't forget this one */
-        text-overflow: ellipsis; } }
+        display: none; } }
   #content.search .main-content .nav li:first-child .icon-nav {
     background: url(../img/icon-search-nav1.png) no-repeat center center; }
   #content.search .main-content .nav li:nth-child(2) .icon-nav {
