--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -95,7 +95,9 @@ footer {
 	}
 	h4 {
 		font-size: 3em;
-		width: 400px;
+		@media screen and (min-width: $screen-sm-max) {
+			width: 400px;
+		}
     	margin-left: auto;
     	margin-right: auto;
     	margin-bottom: 20px;
