--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -275,6 +275,17 @@
 					}
 				}
 			}
+
+			.breadcrumb {
+				background-color: #FFF; 
+				color: $hairfie !important;
+				.active {
+					text-decoration: underline;
+				}
+				a {
+					color: $hairfie;
+				}
+			}
 		}
 	}
 	section.salon-content {
