--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -1,4 +1,6 @@
 header {
+	position: relative;
+	z-index: 20;
 	div.dark-header {
 		background-color: $dark-header;
 		height: 35px;
@@ -93,6 +95,9 @@ header {
 			.separate {
 				color: $lightgrey;
 			}
+			.active {
+				color: $lightgrey;
+			}
 		}
 		.btn-search {
 			margin-top: 12px;
@@ -140,6 +145,9 @@ header {
 					color: white;
 				}
 			}
+			.active {
+				color: white;
+			}
 			.separate {
 				color: white;
 			}
@@ -152,20 +160,6 @@ header {
 			}
 		}
 		.btn-search {
-			display: none;
-		}
-	}
-	div.shadow {
-		&.active {
-		    position: fixed;
-		    width: 100vw;
-		    height: 100vw;
-		    background-color: rgba(0, 0 ,0, 0.4);
-		    left: 0;
-		    top: 0;
-		    z-index: 1;
-		}
-		&.inactive {
 			display: none;
 		}
 	}
@@ -184,7 +178,6 @@ header {
 				position: absolute;
     			bottom: -4px;
     			left: 50%;
-   				color: white;
 			}
 			.inactive {
 				display: none;
@@ -506,5 +499,20 @@ header {
 				}
 			}
 		}
+	}
+}
+
+div.shadow {
+	&.active {
+	    position: fixed;
+	    width: 100vw;
+	    height: 100vw;
+	    background-color: rgba(0, 0 ,0, 0.4);
+	    left: 0;
+	    top: 0;
+	    z-index: 5;
+	}
+	&.inactive {
+		display: none;
 	}
 }
