--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9833,6 +9833,11 @@ div.pagination {
     div.pagination a:hover {
       text-decoration: none; }
 
+.breadcrumb {
+  font-size: 1.4em; }
+  .breadcrumb a {
+    color: #595959; }
+
 .breadcrumb > li + li:before {
   content: " > "; }
 
@@ -11537,12 +11542,7 @@ section.how .row > div {
             right: -195px;
             border-radius: 5px; }
       .salon#content .main-content section.salon-info .breadcrumb {
-        background-color: #FFF;
-        color: #fe5b5f !important; }
-        .salon#content .main-content section.salon-info .breadcrumb .active {
-          text-decoration: underline; }
-        .salon#content .main-content section.salon-info .breadcrumb a {
-          color: #fe5b5f; }
+        background-color: #FFF; }
   .salon#content section.salon-content {
     margin-top: 20px;
     margin-bottom: 70px; }
