--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -865,7 +865,12 @@ div.pagination {
         }
     }
 }
-
+.breadcrumb {
+    font-size: 1.4em;
+    a {
+        color: $darkgrey;
+    }
+}
 .breadcrumb > li + li:before {
   content: " > ";
 }
