--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -223,7 +223,10 @@ section.home-section {
         padding: 0; margin-top: 1px;
         margin-left: -5px;
         line-height: 60px;
-
+        @media screen and (max-width: $screen-md-max) and (min-width: $screen-md-min) {
+            letter-spacing: 1px;
+            font-size: 1.3em;
+        }
         @media screen and (max-width: $screen-md-min) and (min-width: $screen-sm-min) {
             letter-spacing: 1px;
             font-size: 1.0em;
