--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -224,7 +224,12 @@ header {
 				float: left;
 				box-shadow: 3px 3px 2px #dfdfdf;
 				div {
-					padding: 5px 10px;
+					padding: 10px;
+					p {
+						&:nth-child(2) {
+							margin: 0;
+						}
+					}
 				}
 			}
 		}
