--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10962,7 +10962,7 @@ section.how .row > div {
   margin-bottom: 0; }
 
 /*////////////////////////////////
-	   P A G E  S E A R C H
+       P A G E  S E A R C H
 ////////////////////////////////*/
 #content.search .hairfie-search-newsletter {
   margin-top: -5px;
@@ -11006,10 +11006,10 @@ section.how .row > div {
   #content.search .main-content .search-content {
     position: relative;
     /*.tabpanel {
-				div.row {
-					margin-bottom: 15px;
-				}
-			}*/ }
+                div.row {
+                    margin-bottom: 15px;
+                }
+            }*/ }
     #content.search .main-content .search-content:before {
       content: " ";
       width: 200vw;
@@ -11051,12 +11051,44 @@ section.how .row > div {
     @media screen and (max-width: 767px) {
       #content.search .main-content .header-part p {
         display: none; } }
+  @media screen and (max-width: 767px) {
+    #content.search .main-content .nav {
+      margin-left: 0px;
+      margin-right: 0px; }
+      #content.search .main-content .nav li {
+        height: 52px; }
+        #content.search .main-content .nav li a {
+          height: 50px;
+          line-height: 52px;
+          vertical-align: middle;
+          padding: 0;
+          color: #c4c4c4; }
+        #content.search .main-content .nav li.active a {
+          color: #fe5b5f; }
+      #content.search .main-content .nav .icon-nav {
+        top: 16px;
+        left: 15%;
+        width: 15px;
+        height: 15px; } }
+  @media screen and (max-width: 767px) {
+    #content.search .main-content .nav li {
+      background-color: #f4f4f4;
+      border: 1px solid #c4c4c4;
+      border-right-style: none; } }
+  #content.search .main-content .nav li.active {
+    background-color: #FFF; }
   #content.search .main-content .nav li:first-child .icon-nav {
-    background: url(../img/icon-search-nav1.png) no-repeat center center; }
+    background: url(../img/salon.svg) no-repeat center center;
+    background-size: contain; }
+  #content.search .main-content .nav li:first-child.active .icon-nav {
+    background: url(../img/salon-red.svg) no-repeat center center;
+    background-size: contain; }
   #content.search .main-content .nav li:nth-child(2) .icon-nav {
     background: url(../img/icon-search-nav2.png) no-repeat center center; }
   #content.search .main-content .nav li:last-child .icon-nav {
-    background: url(../img/icon-salon-nav3.jpg) no-repeat center center; }
+    background: url(../img/icons/mobile/hairfie.svg) no-repeat center center; }
+  #content.search .main-content .nav li:last-child.active .icon-nav {
+    background: url(../img/icons/mobile/hairfie-red.svg) no-repeat center center; }
   #content.search .main-content .filters {
     margin: 20px 0;
     padding: 20px 10px;
@@ -11133,14 +11165,22 @@ section.how .row > div {
       position: absolute;
       bottom: 0px;
       left: 15px; }
+      @media screen and (max-width: 767px) {
+        #content.search .main-content .tab-pane section:after {
+          width: 100%;
+          background-color: #F7F7F7;
+          left: 0px; } }
     #content.search .main-content .tab-pane section img {
       display: block;
-      width: auto;
-      height: auto;
-      margin: 0 auto;
       min-height: 0;
       max-height: none;
-      width: 100%; }
+      height: 220px;
+      width: 220px;
+      margin-left: 15px; }
+      @media screen and (max-width: 767px) {
+        #content.search .main-content .tab-pane section img {
+          width: 110px;
+          height: 124px; } }
     #content.search .main-content .tab-pane section .rating {
       font-size: 1.2em;
       letter-spacing: 2px; }
@@ -11148,14 +11188,15 @@ section.how .row > div {
         font-family: "Source Sans Pro", sans-serif;
         color: #fc5a5f;
         font-size: 1.4em;
-        font-weight: 600; }
+        font-weight: 600;
+        margin-left: 5px; }
         #content.search .main-content .tab-pane section .rating .note span {
           font-size: 1.43em; }
       #content.search .main-content .tab-pane section .rating a {
         font-size: 0.9em;
         color: #595959;
         letter-spacing: 1px;
-        float: right; }
+        float: left; }
       @media screen and (max-width: 767px) {
         #content.search .main-content .tab-pane section .rating {
           top: -120%;
@@ -11166,25 +11207,46 @@ section.how .row > div {
             font-size: 1.2em; } }
     #content.search .main-content .tab-pane section .inline-promo {
       text-align: left;
-      width: 100%;
-      margin: 8px 0; }
+      line-height: 34px;
+      font-size: 1.6em;
+      font-weight: 400;
+      color: #f39c12;
+      display: block; }
+      @media screen and (max-width: 767px) {
+        #content.search .main-content .tab-pane section .inline-promo {
+          display: none; } }
       #content.search .main-content .tab-pane section .inline-promo .icon-promo {
         margin-right: 10px; }
       #content.search .main-content .tab-pane section .inline-promo span.black {
         margin-left: 3px; }
-    #content.search .main-content .tab-pane section div.address-bloc h3 {
-      font-size: 2.1em;
-      margin: 0 0 3px; }
-    #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
-      font-size: 1.4em;
-      margin-top: 3px; }
-    #content.search .main-content .tab-pane section div.address-bloc div {
-      overflow: auto;
-      padding: 0; }
+    #content.search .main-content .tab-pane section div.address-bloc {
+      /*@media screen and (min-width: $screen-sm-min) {
+                    min-height: 108px;
+                }*/ }
+      #content.search .main-content .tab-pane section div.address-bloc h3 {
+        font-size: 2.1em;
+        margin: 0 0 3px; }
+      #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
+        font-size: 1.4em;
+        margin-top: 3px; }
+      #content.search .main-content .tab-pane section div.address-bloc div {
+        padding: 0; }
+      @media screen and (max-width: 767px) {
+        #content.search .main-content .tab-pane section div.address-bloc a {
+          letter-spacing: 0px;
+          padding-left: 0px;
+          padding-right: 0px;
+          font-size: 0.9em;
+          text-transform: none; }
+        #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
+          font-size: 1.6em; } }
     #content.search .main-content .tab-pane section .btn-red, #content.search .main-content .tab-pane section .btn-book {
       text-transform: uppercase;
       letter-spacing: 1px;
       font-size: 1.2em; }
+      @media screen and (max-width: 767px) {
+        #content.search .main-content .tab-pane section .btn-red, #content.search .main-content .tab-pane section .btn-book {
+          margin: 0; } }
     #content.search .main-content .tab-pane section .salon-hairfies ul {
       display: block;
       width: 100%;
@@ -11205,12 +11267,14 @@ section.how .row > div {
             min-height: 100%; }
   #content.search .main-content .tab-pane#adom {
     margin-top: 20px; }
-    #content.search .main-content .tab-pane#adom section .image-bloc img {
-      border-radius: 100%; }
-      @media screen and (max-width: 991px) {
-        #content.search .main-content .tab-pane#adom section .image-bloc img {
-          width: 50%;
-          margin: 20px auto; } }
+    #content.search .main-content .tab-pane#adom section .image-bloc {
+      height: 100%; }
+      #content.search .main-content .tab-pane#adom section .image-bloc img {
+        border-radius: 100%; }
+        @media screen and (max-width: 991px) {
+          #content.search .main-content .tab-pane#adom section .image-bloc img {
+            width: 50%;
+            margin: 20px auto; } }
     @media screen and (max-width: 767px) {
       #content.search .main-content .tab-pane#adom section .rating {
         top: -85%; }
@@ -11220,25 +11284,37 @@ section.how .row > div {
     font-weight: 400;
     font-size: 1.5em; }
   #content.search .main-content .tab-pane#salons .image-bloc, #content.search .main-content .tab-pane#adom .image-bloc {
+    display: inline-block;
+    float: left;
+    width: 230px;
     overflow: hidden; }
-  @media (min-width: 768px) {
-    #content.search .main-content .tab-pane#salons .info-bloc, #content.search .main-content .tab-pane#adom .info-bloc {
-      position: absolute;
-      left: 33.3%;
-      height: 100%; }
-      #content.search .main-content .tab-pane#salons .info-bloc .book, #content.search .main-content .tab-pane#adom .info-bloc .book {
-        bottom: 20px;
-        position: absolute; } }
-  @media screen and (max-width: 767px) {
-    #content.search .main-content .tab-pane#salons .info-bloc, #content.search .main-content .tab-pane#adom .info-bloc {
-      padding-left: 0;
-      padding-right: 0;
-      padding-top: 15px; }
-      #content.search .main-content .tab-pane#salons .info-bloc .btn-red, #content.search .main-content .tab-pane#salons .info-bloc .btn-book, #content.search .main-content .tab-pane#adom .info-bloc .btn-red, #content.search .main-content .tab-pane#adom .info-bloc .btn-book {
-        display: block;
-        float: none;
-        margin: 0 auto;
-        padding-right: 0; } }
+    @media screen and (max-width: 767px) {
+      #content.search .main-content .tab-pane#salons .image-bloc, #content.search .main-content .tab-pane#adom .image-bloc {
+        width: 110px; } }
+  #content.search .main-content .tab-pane#salons .info-bloc, #content.search .main-content .tab-pane#adom .info-bloc {
+    display: inline-block;
+    float: left;
+    margin-left: -15px;
+    height: 220px;
+    width: calc(100% - 250px); }
+    @media screen and (max-width: 767px) {
+      #content.search .main-content .tab-pane#salons .info-bloc, #content.search .main-content .tab-pane#adom .info-bloc {
+        height: 220px;
+        width: calc(100% - 100px);
+        /*position: absolute;
+                    left: 33.3%;
+                    height: 100%;*/ }
+        #content.search .main-content .tab-pane#salons .info-bloc .book, #content.search .main-content .tab-pane#adom .info-bloc .book {
+          bottom: 0px;
+          position: absolute; } }
+    @media screen and (max-width: 767px) {
+      #content.search .main-content .tab-pane#salons .info-bloc, #content.search .main-content .tab-pane#adom .info-bloc {
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 0.8em; }
+        #content.search .main-content .tab-pane#salons .info-bloc .btn-red, #content.search .main-content .tab-pane#salons .info-bloc .btn-book, #content.search .main-content .tab-pane#adom .info-bloc .btn-red, #content.search .main-content .tab-pane#adom .info-bloc .btn-book {
+          display: block;
+          padding-right: 0; } }
   #content.search .main-content .tab-pane#hairfies section:after {
     content: none; }
   #content.search .main-content .tab-pane#hairfies h3 {
@@ -11372,6 +11448,10 @@ section.how .row > div {
     overflow-x: hidden;
     width: 100%;
     top: 100%; }
+
+@media screen and (max-width: 767px) {
+  .bg-white-xs {
+    background-color: #FFF; } }
 
 /*////////////////////////////////
 	   P A G E  S A L O N
