--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -1,6 +1,7 @@
 header {
 	position: relative;
 	z-index: 20;
+	letter-spacing: 1px;
 	div.dark-header {
 		background-color: $dark-header;
 		height: 35px;
@@ -105,7 +106,8 @@ header {
     		color: #bababa;
     		background-color: white;
     		border-color: #e6e6e6;
-
+			text-align: start;
+    		padding-left: 50px;
 			&.btn-default {
 				&:focus, &:focus, &:active {
 					background-color: initial;
@@ -170,6 +172,7 @@ header {
 			padding: 20px 17px 20px 17px;
 			display: inline-block;
 			position: relative;
+			float: left;
 			a {
 				font-size: 1.4em;
 				font-weight: bolder;
@@ -183,9 +186,13 @@ header {
 				display: none;
 			}
 		}
+		.separate {
+		    font-size: 0.7em;
+		    float: left;
+		    margin-top: 25px;
+		}
 		div.PopUp {
 			text-align: center;
-			font-weight: bolder;
 			padding: 30px 50px;
 			z-index: 50;
 			width: 738px;
@@ -203,6 +210,8 @@ header {
 				font-size: 1.5em;
 			}
 			div.link-list {
+				width: 30%;
+				float: left;
 				a,  p {;
 					display: block;
 					text-align: start;
@@ -220,7 +229,7 @@ header {
 				font-size: 1em;
 				background-color: white;
 				padding: 0;
-				width: calc(33.3333333333% - 5px);
+				width: calc(35% - 5px);
 				float: left;
 				box-shadow: 3px 3px 2px #dfdfdf;
 				div {
