--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9977,7 +9977,7 @@ header {
         outline: none; }
       header.white .btn-search:before {
         content: ' ';
-        background: url(../img/icons/search-header.svg) no-repeat center center;
+        background: url(../img/icons/search-slim.svg) no-repeat center center;
         background-size: contain;
         position: absolute;
         left: 19px;
@@ -10035,10 +10035,15 @@ header {
       float: left; }
       header ul li a {
         font-size: 1.4em;
-        font-weight: bolder; }
+        font-weight: bolder;
+        text-decoration: none !important; }
+        header ul li a:hover {
+          opacity: 0.8; }
+        header ul li a:focus {
+          outline: none; }
       header ul li .active {
         position: absolute;
-        bottom: -4px;
+        bottom: -7px;
         left: 50%; }
       header ul li .inactive {
         display: none; }
@@ -10063,13 +10068,19 @@ header {
         color: #fe5b5f;
         font-size: 1.5em; }
       header ul div.PopUp div.link-list {
-        width: 30%;
+        width: 27%;
         float: left; }
         header ul div.PopUp div.link-list a, header ul div.PopUp div.link-list p {
           display: block;
           text-align: start;
           margin-bottom: 1px;
           font-size: 1.4em; }
+        header ul div.PopUp div.link-list a {
+          text-decoration: none !important; }
+          header ul div.PopUp div.link-list a:hover {
+            opacity: 0.8; }
+          header ul div.PopUp div.link-list a:focus {
+            outline: none; }
         header ul div.PopUp div.link-list p.title {
           margin-bottom: 10px;
           color: #595959; }
@@ -10079,13 +10090,15 @@ header {
         font-size: 1em;
         background-color: white;
         padding: 0;
-        width: calc(35% - 5px);
+        width: calc(36.5% - 5px);
         float: left;
         box-shadow: 3px 3px 2px #dfdfdf; }
         header ul div.PopUp a.picture div {
           padding: 10px; }
-          header ul div.PopUp a.picture div p:nth-child(2) {
-            margin: 0; }
+          header ul div.PopUp a.picture div p {
+            font-weight: lighter; }
+            header ul div.PopUp a.picture div p:nth-child(2) {
+              margin: 0; }
 
 .dropdown {
   font-weight: 400; }
