--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -86,7 +86,7 @@ ul {
             border-right: 1px solid $border-color;
             border-bottom:1px solid $border-color;
             cursor: pointer;
-            background: white;
+            background: $bg4;;
 
             .icon-nav {
                 position: absolute;
