--- a/public/scss/partials/_variables.scss
+++ b/public/scss/partials/_variables.scss
@@ -8,6 +8,8 @@ $border-color: #f9f9f9;
 $bg1: #fff;
 $bg2: #f0f0f1;
 $bg3: #f4f4f4;
+$bg4: #f7f7f7;
+$bg5: #fcfcfc;
 $bgfooter: #353535;
 $grey: #c4c4c4;
 $lightgrey: #898989;
@@ -27,3 +29,4 @@ $book-darker: #007d83;
 $book-lighter: #04C0CA;
 
 $grey1: #aaaaaa;
+$grey2: #dfdfdf;
