--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9134,7 +9134,7 @@ ul {
       border-right: 1px solid #f9f9f9;
       border-bottom: 1px solid #f9f9f9;
       cursor: pointer;
-      background: white; }
+      background: #f7f7f7; }
       #content ul.nav li .icon-nav {
         position: absolute;
         display: block;
@@ -11650,38 +11650,46 @@ section.how .row > div {
       font-family: "Source Sans Pro", sans-serif; }
     .salon#content section.salon-content > .row {
       background-color: white; }
-    .salon#content section.salon-content ul.nav li a {
-      padding-top: 55px; }
-    .salon#content section.salon-content ul.nav li .icon-nav {
-      width: 30px;
-      height: 30px;
-      left: 0;
-      right: 0;
-      margin-left: auto;
-      margin-right: auto;
-      background-repeat: no-repeat; }
-    .salon#content section.salon-content ul.nav li:not(.active):first-child .icon-nav {
-      /* @include mask(url(../img/icons/info.svg) no-repeat 100% 100%);
-						background-color: #666b74;
-						*/
-      background-image: url(../img/icons/info.svg);
-      background-size: contain; }
-    .salon#content section.salon-content ul.nav li:not(.active):nth-child(2) .icon-nav {
-      background-image: url(../img/icons/avis.svg);
-      background-size: contain; }
-    .salon#content section.salon-content ul.nav li:not(.active):last-child {
-      border-right: none; }
+    .salon#content section.salon-content ul.nav li {
+      border-top: 1px solid #dfdfdf;
+      border-right: 1px solid #dfdfdf;
+      border-bottom: 1px solid #dfdfdf; }
+      .salon#content section.salon-content ul.nav li:first-child {
+        border-left: 1px solid #dfdfdf; }
+      .salon#content section.salon-content ul.nav li a {
+        height: initial;
+        padding-top: 55px; }
+      .salon#content section.salon-content ul.nav li .icon-nav {
+        width: 30px;
+        height: 30px;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        background-repeat: no-repeat; }
+    .salon#content section.salon-content ul.nav li:not(.active) {
+      background-color: #f7f7f7; }
+      .salon#content section.salon-content ul.nav li:not(.active) a {
+        background-color: #f7f7f7; }
+      .salon#content section.salon-content ul.nav li:not(.active):first-child .icon-nav {
+        background-image: url(../img/icons/info.svg);
+        background-size: contain; }
+      .salon#content section.salon-content ul.nav li:not(.active):nth-child(2) .icon-nav {
+        background-image: url(../img/icons/avis.svg);
+        background-size: contain; }
       .salon#content section.salon-content ul.nav li:not(.active):last-child .icon-nav {
         background-image: url(../img/icons/hairfie.svg);
         background-size: contain; }
-    .salon#content section.salon-content ul.nav li.active:first-child .icon-nav {
-      background-image: url(../img/icons/info-selected.svg);
-      background-size: contain; }
-    .salon#content section.salon-content ul.nav li.active:nth-child(2) .icon-nav {
-      background-image: url(../img/icons/avis-selected.svg);
-      background-size: contain; }
-    .salon#content section.salon-content ul.nav li.active:last-child {
-      border-right: none; }
+    .salon#content section.salon-content ul.nav li.active {
+      background-color: #fcfcfc; }
+      .salon#content section.salon-content ul.nav li.active a {
+        background-color: #fcfcfc; }
+      .salon#content section.salon-content ul.nav li.active:first-child .icon-nav {
+        background-image: url(../img/icons/info-selected.svg);
+        background-size: contain; }
+      .salon#content section.salon-content ul.nav li.active:nth-child(2) .icon-nav {
+        background-image: url(../img/icons/avis-selected.svg);
+        background-size: contain; }
       .salon#content section.salon-content ul.nav li.active:last-child .icon-nav {
         background-image: url(../img/icons/hairfie-selected.svg);
         background-size: contain; }
