--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9134,7 +9134,7 @@ ul {
       border-right: 1px solid #f9f9f9;
       border-bottom: 1px solid #f9f9f9;
       cursor: pointer;
-      background: #f7f7f7; }
+      background: white; }
       #content ul.nav li .icon-nav {
         position: absolute;
         display: block;
