--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9879,6 +9879,12 @@ iframe {
   width: 100px !important;
   *width: 100% !important; }
 
+input:not(:focus).valid {
+  border: 2px solid #3c763d !important; }
+
+input:not(:focus).error {
+  border: 2px solid #a94442 !important; }
+
 header {
   position: relative;
   z-index: 20;
